# purecard

./: .coderabbit.yaml  .envrc  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .markdownlint.yaml  .markdownlintignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOMAIN.md  README.md  SECURITY.md  clippy.toml  commitlint.config.mjs  constitution.md  deny.toml  justfile  lefthook.yml  package.json  pyproject.toml  release-plz.toml  rustfmt.toml  sgconfig.yml
.cargo/: audit.toml  config.toml  mutants.toml
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/commands/: new-feature.md  review.md  spec.md  sweep.md
.claude/skills/dependency-vetting/: SKILL.md
.claude/skills/fold-or-branch/: SKILL.md
.claude/skills/layered-testing/: SKILL.md
.claude/skills/rot-sweep/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/skills/start-feature/: SKILL.md
.config/: nextest.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  labeler.yml  lint.yml  qwen-oracle.yml  release-plz.yml  security.yml  wheels.yml
ast-grep-rules/: no-panic-outside-tests.yml  no-platform-shellout.yml  no-postponed-markers.yml  no-unwrap-outside-tests.yml
benches/: allowed_mask.rs
corpus/: README.md  differential_l1.jsonl  modern_dialect_seeds.jsonl
corpus/legend-stack/: docker-compose.yml  engine-config.yml  remote.override.yml  sdlc-config.yml
corpus/schemas/: armC_ctx_battle_death.md  armC_ctx_car_1.md  armC_ctx_concert_singer.md  armC_ctx_employee_hire_evaluation.md  armC_ctx_pets_1.md  oos_ctx_dog_kennels.md  oos_ctx_student_transcripts_tracking.md  oos_ctx_world_1.md
corpus/spider_schemas/: README.md  academic.json  activity_1.json  aircraft.json  allergy_1.json  apartment_rentals.json  architecture.json  assets_maintenance.json  baseball_1.json  behavior_monitoring.json  bike_1.json  body_builder.json  book_2.json  browser_web.json  candidate_poll.json  chinook_1.json  cinema.json  city_record.json  climbing.json  club_1.json  coffee_shop.json  college_1.json  college_2.json  college_3.json  company_1.json  company_employee.json  company_office.json  county_public_safety.json  course_teach.json  cre_Doc_Control_Systems.json  cre_Doc_Template_Mgt.json  cre_Doc_Tracking_DB.json  cre_Docs_and_Epenses.json  cre_Drama_Workshop_Groups.json  cre_Theme_park.json  csu_1.json  culture_company.json  customer_complaints.json  customer_deliveries.json  customers_and_addresses.json  (+119 more)
docs/: domain-model.md  lessons.md
docs/decisions/: 0000-adr-template.md  0001-record-architecture-decisions.md  0002-purecard-single-crate-decoder.md  0003-non-core-in-tests-deplight-core.md  0004-both-arms-m1-grammar-scope.md  0005-serde-into-core-for-l2-schema-ingress.md  0006-fuzz-crate-excluded-and-is-accepting-derived-from-step.md  0007-modern-dialect-seed-corpus.md  0008-arm-r-relation-function-api.md
docs/methodology/: decoder-testing.md  model-tiering.md  overview.md  quality-layers.md  self-learning.md  spec-driven.md  testing.md  twelve-factor.md
docs/spec/: README.md  architecture.md  grammar.md  overview.md  schema.md  testing.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: accept_token.rs  allowed_mask.rs  schema_from_json.rs
lints/: Cargo.toml
lints/src/: lib.rs
python/tests/: test_session.py
scripts/: install-cargo-tools.mjs  label-differential.mjs
scripts/checks/: no-ci-warnings.mjs  no-ci-warnings.test.mjs  postponed-markers.mjs  stale-selfdescription.mjs  stale-selfdescription.test.mjs
scripts/lib/: align-md-tables.mjs  ci.mjs  git.mjs
specs/: l1-differential-oracle.md  l1-latest-milestoning.md  l1-quoted-member-access.md  l1-relation-api-arm-r.md  l1-structural-test-gates.md  l2-arm-r-column-narrowing.md  l2-bpe-prefix-fix.md  l2-nested-scope-hardening.md  l2-pass2-fixes.md  m0-oracle-harness.md  m1-l1-grammar.md  m2-mask-cache.md  m3-schema-overlay.md  m4-pyo3-boundary.md  m5-hardening.md
src/: engine.rs  error.rs  ffi.rs  lib.rs  mask.rs  recognizer.rs  selfcheck.rs  session.rs  vocab.rs
src/grammar/: compiled.rs  mod.rs  pda.rs
src/schema/: mod.rs  model.rs  narrow.rs  scope.rs  trie.rs
tests/: bpe_split_soundness.rs  classify_oracle.rs  completeness_walks.rs  differential_l1.rs  engine_completeness.rs  fused_tokenizer_extract.rs  fused_tokenizer_precision.rs  l2_precision.rs  l2_properties.rs  l2_soundness.rs  legend_completeness.rs  mask_oracle.rs  mask_properties.rs  modern_dialect_soundness.rs  precision_reject.rs  qwen_soundness.rs  selfcheck_corpus.rs  soundness_replay.rs  spider_corpus_replay.rs
tests/fixtures/: lambda.json  model.json
tests/fixtures/schemas/: battle_death.json  car_1.json  concert_singer.json  dog_kennels.json  employee_hire_evaluation.json  pets_1.json  student_transcripts_tracking.json  world_1.json
tests/fixtures/tokenizers/: fused_precision.jsonl
tests/support/: bpe.rs  byte_decode.rs  corpus.rs  error.rs  fixture_dbs.rs  fused_fixture.rs  l1.rs  l2.rs  legend.rs  lex.rs  recognizer.rs  spider_corpus.rs  synth.rs  walker.rs
xtask/: Cargo.toml
xtask/src/: main.rs  process.rs  tasks.rs
