[package]
name = "purecard"
description = "Grammar- and schema-constrained decoder for Legend Pure: masks a language model's logits so generated queries are valid — and schema-consistent — by construction, in a single forward pass."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["constrained-decoding", "grammar", "llm", "legend", "pure"]
categories = ["parser-implementations", "text-processing"]
# Ship only the library in the published crate — not the 4.7 MB test corpus, the
# docs tree (the spec lives under docs/spec/), or the repo's CI/automation. The
# leading `/` anchors each file to the package root: an unanchored `README.md`
# glob matches at any depth (gitignore semantics) and would drag `corpus/README.md`
# into the tarball — exactly what `just check-core-deplight` guards against.
include = ["src/**/*", "/README.md", "/LICENSE"]

# The core's dependency allowlist: `thiserror` (ADR-0004), plus `serde` +
# `serde_json` — the M3 widening, recorded in ADR-0005. `thiserror` is the
# byte-PDA's library error type (constitution §1). `serde` + `serde_json` ingest
# the host `Schema` as JSON at session init (`Schema::from_json`,
# `docs/spec/schema.md` §6.3, §9), so their parser is shipped host-facing code,
# not a dev-only oracle — a bespoke JSON parser would fail "library before
# writing" (§4) by owning escaping/number edge cases for no gain. `cargo xtask
# check-core-deplight` enforces the widened
# `[dependencies] ⊆ { thiserror, serde, serde_json }`; any other runtime dep still
# fails the gate. serde carries its default (`std`) features; `derive` powers the
# `#[derive(Deserialize)]` schema types.
[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
anyhow.workspace = true
# The `legend` lane's live-HTTP Legend client boundary. The engine is a local,
# plain-HTTP service (http://localhost:6300), so TLS is disabled
# (`default-features = false`): no rustls/ring/webpki-roots tree, smaller and
# license-clean. `json` enables `send_json` / `Body::read_json` for the POST.
ureq = { version = "3.3.0", default-features = false, features = ["json"] }
# M2 mask testing (dev-only, so `check-core-deplight`'s `[dependencies] ⊆
# {thiserror}` gate is untouched). `proptest` drives the §8.5 rollback/equivalence
# properties from committed seeds (`proptest-regressions/`); `criterion` measures
# `allowed_mask` latency (`benches/allowed_mask.rs`). Criterion runs with
# `default-features = false` — no plotters/gnuplot/rayon tree, just the
# `cargo_bench_support` harness needed for `harness = false` benches.
proptest = "1.11.0"
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }

# The M2 mask-latency benchmark (§4, G3). `harness = false` hands `main` to
# criterion; `just bench` (`cargo bench --workspace`) picks it up.
[[bench]]
name = "allowed_mask"
harness = false

[workspace]
resolver = "3"
members = ["xtask"]
# `lints` is a dylint library (links `clippy_utils`, needs rustc_private +
# nightly); it is built out-of-band via `cargo dylint`, never by a stable
# `cargo build`, so it is excluded from the workspace.
exclude = ["lints"]

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "Apache-2.0"
authors = ["Thiago Souza <tcostasouza@gmail.com>"]
repository = "https://github.com/tsouza/purecard"
# 1.88: the `legend` lane's dev-only HTTP client (ureq → cookie_store → time)
# needs the security-patched `time` >= 0.3.47 (RUSTSEC-2026-0009), which requires
# 1.88. The published core builds on less, but the package declares one MSRV.
rust-version = "1.88"

[workspace.dependencies]
# Shared by the `xtask` dev/CI orchestrator. The `purecard` crate itself is
# dependency-free at M0; decoder deps land with the milestones (see docs/spec/).
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3

[features]
# The Legend-backed completeness lane (opt-in): compiles the live-HTTP client in
# `tests/support/legend.rs` and collects `tests/legend_completeness.rs`. A bare
# cfg flag — `ureq`/`anyhow` are unconditional `[dev-dependencies]`, so a feature
# cannot use `dep:` on them. Off by default so `just ci` stays hermetic; enabled
# for the nightly/on-demand completeness tests via `just test-legend`.
legend = []
