[package]
name = "purecard-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# cargo-fuzz marks this crate as a fuzzing crate so `cargo fuzz` discovers the
# targets under `fuzz_targets/`.
[package.metadata]
cargo-fuzz = true

# Unsafe-policy exception (constitution §1, ADR-0006), stated explicitly rather
# than left as a silent absence of `#![forbid(unsafe_code)]`. Every shipped crate
# carries that forbid; this crate cannot, because `libfuzzer-sys`'s `fuzz_target!`
# macro expands to `unsafe` glue around the libFuzzer entry point. The exception is
# deliberately narrow and machine-checkable: the crate is excluded from the root
# workspace (see ../Cargo.toml [workspace].exclude), is `publish = false`, is built
# only out-of-band via `cargo +nightly fuzz`, and is never linked into the published
# `purecard` crate — which keeps `#![forbid(unsafe_code)]` intact. This `allow` is
# scoped to the fuzz crate alone; it does not relax the standard anywhere else.
[lints.rust]
unsafe_code = "allow"

# Excluded from the root workspace (see ../Cargo.toml [workspace].exclude): the
# libfuzzer harness generates `unsafe` and needs nightly, which the pure core
# forbids. Kept out-of-band so the core stays `#![forbid(unsafe_code)]`.
[dependencies]
libfuzzer-sys = "0.4.13"
arbitrary = { version = "1.4.2", features = ["derive"] }
purecard = { path = ".." }

[[bin]]
name = "accept_token"
path = "fuzz_targets/accept_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "allowed_mask"
path = "fuzz_targets/allowed_mask.rs"
test = false
doc = false
bench = false

[[bin]]
name = "schema_from_json"
path = "fuzz_targets/schema_from_json.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
